| Summary: | ASTERISK-25320: chan_sip.c: sip_report_security_event searches for wrong or non existent peer on invite | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |
| Date Opened: | 2015-08-12 12:51:49 | Date Closed: | 2015-08-13 16:13:20 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_sip/Security Framework |
| Versions: | Frequency of Occurrence | Constant | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | In chan_sip, after handling an incoming invite a security event is raised describing authorization (success, failure, etc...). However, it is doing a lookup of the peer by extension. This is fine for register messages, but in the case of an invite it may search and find the wrong peer, or a non existent one (for instance, in the case of call pickup). If the peers are configured through realtime this may also cause an unnecessary database lookup when caching is enabled. | ||
| Comments: | |||